--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -92,14 +92,14 @@
 			//九宫格底部标题数组
 			var chars = ["基础信息", "通知公告", "事务审批", "班级管理", "课堂管理", "访客", "请假", "敬请期待"];
 			//九宫格图片地址数组
-			var imgUrls = ["../image/u52.png",                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
-				"../image/u56.png",
-				"../image/u54.png",
-				"../image/u197.png",
-				"../image/u193.png",
-				"../image/u191.png",
-				"../image/u195.png",
-				"../image/u189.png"
+			var imgUrls = ["../image/firstPage/firstPage0.png",                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
+				"../image/firstPage/firstPage1.png",
+				"../image/firstPage/firstPage2.png",
+				"../image/firstPage/firstPage3.png",
+				"../image/firstPage/firstPage4.png",
+				"../image/firstPage/firstPage5.png",
+				"../image/firstPage/firstPage6.png",
+				"../image/firstPage/firstPage7.png"
 			];
 			//点击跳转的html地址数组
 			var urls = ['all.html','all.html' ,'all.html' ,'all.html' ,'all.html' ,'all.html' ,'all.html' , 'all.html'];
