--- a/wisdomCampus/html/all.html
+++ b/wisdomCampus/html/all.html
@@ -102,7 +102,7 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">通知公告</h1>
 		</header>
-		<!--<nav class="mui-bar mui-bar-tab">
+		<nav class="mui-bar mui-bar-tab">
 
 			<div class="mui-table-cell mui-col-xs-6 mui-text-center" style="padding-top: 15px;">
 				<a id="a0" onclick="send_receive('0')" style="color: deepskyblue;">发给我的</a>
@@ -110,7 +110,7 @@
 			<div class="mui-table-cell mui-col-xs-6 mui-text-center" style="padding-top: 15px;">
 				<a id="a1" onclick="send_receive('1')" style="color: black;">我发出的</a>
 			</div>
-		</nav>-->
+		</nav>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
@@ -121,10 +121,6 @@
 						<a class="mui-control-item" href="#item2mobile">
 							事物审批
 						</a>
-						<a class="mui-control-item" href="#item3mobile">
-							班级管理
-						</a>
-
 
 					</div>
 				</div>
@@ -134,65 +130,13 @@
 							<div class="mui-scroll">
 								<ul class="mui-table-view">
 									<li class="mui-table-view-cell">
-										第1个选项卡子项-1
+										<div>
+											<p class="mui-ellipsis" style="white-space: pre;font-size:14px;color:#333333;width: 90%;"><span style="color: red;">[未阅]</span>学校首次召开家长会，希望各位12233488888888888888</p>
+											<p class="mui-ellipsis mui-pull-right" style="margin-top: 5px;margin-left: 5px;font-size:10px;color:#999999">
+												王主任|2017/11/12 13:30</p>
+										</div>
 									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第1个选项卡子项-20
-									</li>
+
 								</ul>
 							</div>
 						</div>
@@ -202,269 +146,13 @@
 							<div class="mui-scroll">
 								<ul class="mui-table-view">
 									<li class="mui-table-view-cell">
-										第2个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第2个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item3mobile" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第3个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item4mobile" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第4个选项卡子项-20
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div id="item5mobile" class="mui-slider-item mui-control-content">
-						<div class="mui-scroll-wrapper">
-							<div class="mui-scroll">
-								<ul class="mui-table-view">
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-1
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-2
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-3
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-4
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-5
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-6
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-7
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-8
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-9
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-10
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-11
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-12
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-13
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-14
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-15
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-16
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-17
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-18
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-19
-									</li>
-									<li class="mui-table-view-cell">
-										第5个选项卡子项-20
-									</li>
+										<div>
+											<p class="mui-ellipsis" style="white-space: pre;font-size:14px;color:#333333;width: 90%;"><span style="color: #FF0000">[未批]</span>学校首次召开家长会，希望各位12233488888888888888</p>
+											<p class="mui-ellipsis mui-pull-right" style="margin-top: 5px;font-size:12px;color:#999999">
+												王主任|2017/11/12 13:30</p>
+										</div>
+									</li>
+
 								</ul>
 							</div>
 						</div>
@@ -520,7 +208,20 @@
 						for(var i = 0; i < count; i++) {
 							li = document.createElement('li');
 							li.className = 'mui-table-view-cell';
-							li.innerHTML = '第' + (index + 1) + '个选项卡子项-' + (length + (reverse ? (count - i) : (i + 1)));
+
+							if(index == 0) {
+
+							} else if(index == 1) {
+
+							}
+							li.innerHTML = '<div>' +
+								'<p class="mui-ellipsis" style="white-space: pre;font-size:14px;color:#333333;width: 90%;"><span style="color: #FF0000;">' +
+								'[未阅]</span>学校首次召开家长会，希望各位12233488888888888888' +
+								'</p>' +
+								'<p class="mui-ellipsis mui-pull-right" style="margin-top: 5px;font-size:12px;color:#999999">' +
+								'王主任|2017/11/12 13:30' +
+								'</p>' +
+								'</div>'
 							fragment.appendChild(li);
 						}
 						return fragment;
