--- a/wisdomCampus/html/login.html
+++ b/wisdomCampus/html/login.html
@@ -31,7 +31,7 @@
 			<hr style=" height:1px;border:none;border-top:1px solid dodgerblue;margin: -12px 20px 0px 60px ;" />
 
 			<div style="padding: 0px 20px;">
-				<button id='login' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border:none; margin-top: 30px;">登录</button>
+				<button id='login' type="button" class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border:none; margin-top: 30px;">登录</button>
 			</div>
 		</div>
 	</body>
@@ -47,8 +47,7 @@
 	<script src='../js/lib/jquery.js'></script>
 	<script src="../js/PublicProtocol.js"></script>
 	<script src='../js/utils/sortSign.js'></script>
-	<!--<script src="../js/utils/myStorage.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../js/utils/storageKeyName.js" type="text/javascript" charset="utf-8"></script>-->
+	<script src="../js/utils/storageKeyName.js"></script>
 	<script>
 		document.getElementById("login").addEventListener('tap', function(event) {
 			console.log("登录");
@@ -63,9 +62,10 @@
 				appid: 'appid'//系统所分配的应用ID
 			};
 			//发送网络请求，data为网络返回值
-			postDataEncry('ShakeHand', enData0, comData0, 0,{}, function(data) {
+			postDataEncry('ShakeHand', enData0, comData0, 0, function(data) {
 				console.log('2121212');
-//				window.myStorage.setItem(window.storageKeyName.SHAKEHAND, data.RspData);
+				window.storageutil.setLocalStorage(window.storageKeyName.SHAKEHAND, JSON.stringify(data.RspData));
+//				storageutil.setLocalStorage('111',data.RspData);
 				var enData1 = {
 					uid: 'ceshi01',//用户账号
 					pw: '123456'//用户密码
@@ -79,8 +79,8 @@
 					utp: '0'//用户类型，0老师,1家长,2学生
 				};
 				//登录
-				postDataEncry('Login', enData1, comData1, 0,data.RspData, function(data1) {
-//					window.myStorage.setItem(window.storageKeyName.PERSONALINFO, data1.RspData);
+				postDataEncry('Login', enData1, comData1, 0, function(data1) {
+					window.storageutil.setLocalStorage(window.storageKeyName.PERSONALINFO, data1.RspData);
 					utils.hrefSessionStorage('home.html',{});
 					//判断是否安卓系统
 					if (utils.isAndroid()) {
