修改协议、登录界面参数问题

--- a/wisdomCampus/html/testPro.html
+++ b/wisdomCampus/html/testPro.html
@@ -43,20 +43,20 @@
 //				62f8d903-1671-45f9-96c2-62d112441463
 //				getUUID111();
 				//10.获取发送的通知公告列表
-				//				var tempData = {
-				//					schoolId:'1',//学校ID
-				//					sendManId:'konglm',//发送人ID
-				//					title:'',//标题
-				//					status:'0',//状态,0 全部,1 发出,2 撤销
-				//					progress:'0',//进程,0 全部,1 新建,2 处理中,3 阅毕,4 已撤销
-				//					beginTime:'20170101',//查询开始时间
-				//					endTime:'20180127',//查询结束时间
-				//					pageIndex:'1',//当前页数
-				//					pageSize:'10'//每页记录数
-				//				}
-				//				getSendNoticePro(tempData,function function_name () {
-				//					
-				//				});
+								var tempData = {
+									schoolId:'1',//学校ID
+									sendManId:'konglm',//发送人ID
+									title:'',//标题
+									status:'0',//状态,0 全部,1 发出,2 撤销
+									progress:'0',//进程,0 全部,1 新建,2 处理中,3 阅毕,4 已撤销
+									beginTime:'20170101',//查询开始时间
+									endTime:'20180127',//查询结束时间
+									pageIndex:'1',//当前页数
+									pageSize:'10'//每页记录数
+								}
+								getSendNoticePro(tempData,function function_name () {
+									
+								});
 
 				//11.获取收到的通知公告列表（接收人为单人）
 				//				var tempData = {
@@ -87,33 +87,33 @@
 //													
 //												});
 
-				var enData0 = {};
-				//不需要加密的数据
-				var comData0 = {
-					uuid: '16b02e57b4dfb22',
-					shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
-					appid: 'appid'
-				};
-				//发送网络请求，data为网络返回值
-				postDataEncry('ShakeHand', enData0, comData0, 0, function(data) {
-					console.log('2121212');
-//					window.myStorage.setItem(window.storageKeyName.SHAKEHAND, data.RspData);
-					var enData1 = {
-						uid:'ceshi01',
-						pw:'123456'
-					};
-					//不需要加密的数据
-					var comData1 = {
-						uuid: '16b02e57b4dfb22',
-						shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
-						appid: 'appid',
-						schid:'100005',
-						utp:'0'
-					};
-					postDataEncry('Login', enData1, comData1, 0, function(data) {
-						
-					});
-				});
+//				var enData0 = {};
+//				//不需要加密的数据
+//				var comData0 = {
+//					uuid: '16b02e57b4dfb22',
+//					shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
+//					appid: 'appid'
+//				};
+//				//发送网络请求，data为网络返回值
+//				postDataEncry('ShakeHand', enData0, comData0, 0, function(data) {
+//					console.log('2121212');
+////					window.myStorage.setItem(window.storageKeyName.SHAKEHAND, data.RspData);
+//					var enData1 = {
+//						uid:'ceshi01',
+//						pw:'123456'
+//					};
+//					//不需要加密的数据
+//					var comData1 = {
+//						uuid: '16b02e57b4dfb22',
+//						shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
+//						appid: 'appid',
+//						schid:'100005',
+//						utp:'0'
+//					};
+//					postDataEncry('Login', enData1, comData1, 0, function(data) {
+//						
+//					});
+//				});
 			}
 		</script>
 	</body>
