--- a/wisdomCampus/html/testPro.html
+++ b/wisdomCampus/html/testPro.html
@@ -82,7 +82,17 @@
 				//								getNoticeByIdPro(tempData, function function_name() {
 				//				
 				//								});
-
+				
+				//16.审批事务及文件申请
+//				var tempData = {
+//					approveId: '3', //审批ID
+//					approveContent: '就不同意', //审批内容
+//					approveResult: '2' //审批结果，1 同意，2 退回
+//				}
+//				setAffairApprovePro(tempData, function function_name() {
+//
+//				});
+				
 				//17.获取事务及文件申请列表
 //				var tempData = {
 //					schoolId: '1', //学校ID
