--- a/wisdomCampus/html/noticeDetails.html
+++ b/wisdomCampus/html/noticeDetails.html
@@ -6,40 +6,80 @@
 		<title></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../css/mui.min.css" rel="stylesheet" />
-		<script type="text/javascript" src="../js/mui.min.js"></script>
-		<script type="text/javascript">
-		</script>
-
+		<style type="text/css">
+			.contentCSS {
+				margin-left: 15px;
+				margin-right: 15px;
+			}
+			
+			.button {
+				background-color: #4CAF50;
+				border: none;
+				color: white;
+				padding: 15px 32px;
+				text-align: center;
+				text-decoration: none;
+				display: inline-block;
+				font-size: 16px;
+				margin: 4px 2px;
+				cursor: pointer;
+			}
+		</style>
 	</head>
 
 	<body>
-
+		<header class="mui-bar mui-bar-nav">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">通知详情</h1>
+		</header>
 		<div class="mui-content">
-			<div style="height: 200px;font-size: 25px;color: dodgerblue;padding: 100px 0px;text-align: center;">登录</div>
-			<div class="mui-input-row">
-				<label style="margin-top: -5px;"><image src="../image/user-photo.png" style="width: 30px;height: 30px;" /></label>
-				<input id='account' type="tel" class="mui-input-clear mui-input" placeholder="请输入用户名">
+			<h1 align="center" style="font-size: 18px;color: #000;margin-top: 10px;">标题</h1>
+			<p align="center" style="font-size: 12px;color: #999;">王主任 | 2017/11/12 13:30</p>
+			<p class="contentCSS" style="font-size: 14px;color: #666;">段落通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情通知详情</p>
+			<p class="contentCSS">附件:
+				<div>
+					<p class="contentCSS">附件1
+						<a>(9.13k)</a><button type="button" class="mui-btn mui-btn-grey">预览</button><button type="button" class="mui-btn mui-btn-blue">下载</button></p>
+					<p class="contentCSS">附件1
+						<a>(9.13k)</a><button type="button" class="mui-btn mui-btn-grey">预览</button><button type="button" class="mui-btn mui-btn-blue">下载</button></p>
+			</p>
 			</div>
-			<hr style=" height:1px;border:none;border-top:1px solid dodgerblue;margin: -12px 20px 5px 60px ;" />
 
-			<div class="mui-input-row ">
-				<label><image src="../image/user-photo.png" style="width: 30px;height: 30px;" /></label>
-				<input id='password' type="password" class="mui-input-clear mui-input " placeholder="请输入6位密码">
+			<!--滑动组件-->
+			<div id="sliderSegmentedControl" class=" mui-segmented-control mui-segmented-control-inverted mui-segmented-control-primary">
+				<a id="item1" class="mui-control-item mui-active" href="#div-finished">
+					已完成(0)
+				</a>
+
+				<a id="item2" class="mui-control-item" href="#div-unfinish">
+					未完成(0)
+				</a>
 			</div>
-			<hr style=" height:1px;border:none;border-top:1px solid dodgerblue;margin: -12px 20px 0px 60px ;" />
-
-			<div style="padding: 0px 20px;">
-				<button id='login' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border:none; margin-top: 30px;">登录</button>
-
+			<!--滑动内容-->
+			<div class="mui-slider-group">
+				<div id="div-finished" class="mui-slider-item mui-control-content mui-active">
+					<a class="contentCSS">1111</a>
+				</div>
+				<div id="div-unfinish" class="mui-slider-item mui-control-content">
+					<a class="contentCSS">2222</a>
+				</div>
 			</div>
 		</div>
-	</body>
-	<script>
-		document.getElementById("login").addEventListener('tap', function(event) {
-			console.log("登录")
-			plus.device.uuid
-		})
+		<script src="../js/mui.min.js"></script>
+		<script src="../js/vue/vue.min.js"></script>
+		<script src="../js/publicProtocol.js"></script>
 		
-	</script>
+		<!--签名-->
+		<script src="../js/login/crypto-js/require.js"></script>
+		<script src="../js/utils/app-update.js"></script>
+		<script src="../js/utils/sortSign.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/utils/signHmacSHA1.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../js/login/jquery.js" type="text/javascript" charset="utf-8"></script>
+		
+		<script type="text/javascript">
+			mui.init();
+//			shakeHand();
+		</script>
+	</body>
 
 </html>
